Range Silder "Width" changes on resize Mobile View bug fixing Checkbox flicker changes removed css for width<375

--- a/src/Components/DeviceDetails/DeviceDetails.scss
+++ b/src/Components/DeviceDetails/DeviceDetails.scss
@@ -11,7 +11,7 @@
     transition: all 0.5s ease-in-out;
 }
 .deviceTitleWrapper {
-    margin-left: 420px;
+    margin-left: 380px;
     padding: 75px 75px 0px;
     width: 100%;
     justify-content: space-between;
@@ -36,7 +36,7 @@
     }
 }
 .deviceDetailsWrapper {
-    margin-left: 420px;
+    margin-left: 380px;
     width: 100%;
     background-color: #FEFFFE;
     padding: 0px 75px;
@@ -102,27 +102,34 @@
     } 
     .shadesWrapper {
         .checkBoxWrapper {
-            padding-bottom: 60px;
-            .checkBox {
-                width: 32px;
-                height: 32px;
+            padding-bottom: 30px;
+            flex-wrap: wrap;
+
+            .checkBoxContainer {
+                width: 48px;
+                height: 48px;
+                margin-right: auto;
+                margin-bottom: 30px;
+                padding: 8px;
                 cursor: pointer;
-                box-shadow: 0 10px 10px 0 rgba(0,0,0,0.15);
                 -webkit-transition:all 0.125s ease-in-out;
                 -moz-transition:all 0.125s ease-in-out;
                 -o-transition:all 0.125s ease-in-out;
                 transition: all 0.125s ease-in-out;
 
-                &:hover {
-                    width: 48px;
-                    height: 48px;
+                &:last-child {
+                    margin-right: 0px;
                 }
-
-                &.active {
-                    width: 48px;
-                    height: 48px;
-                    box-shadow: 0 27px 27px 0 rgba(0,0,0,0.15);
+                
+                &:hover, &.active {
+                    padding: 0px;
                 }
+            }
+            
+            .checkBox {
+                width: 100%;
+                height: 100%;
+                box-shadow: 0 10px 10px 0 rgba(0,0,0,0.15);
             }
         }
     }
@@ -217,12 +224,12 @@
 
 @media (max-width: 991px) {
     .deviceTitleWrapper {
-        margin-left: 250px;
-        padding: 70px 40px 0px;
+        margin-left: 210px;
+        padding: 70px 40px 0px 60px;
     }
     .deviceDetailsWrapper {
-        margin-left: 250px;
-        padding: 0px 40px;
+        margin-left: 210px;
+        padding: 0px 40px 0px 60px;
         .shadesWrapper, .modesWrapper, .IntensityWrapper {
             .headingWrapper {
                 .title {
@@ -251,24 +258,47 @@
 
 @media (max-width: 767px) {
     .plusIcon {
-        margin-left: 190px;
+        margin-left: 150px;
+        padding: 0px 40px 0px 50px;
     }
     .deviceTitleWrapper {
-        padding: 0 20px;
-        margin-left: 190px;
+        margin-left: 0px;
+        z-index: 2;
         justify-content: center;
+        padding: 25px 40px 0px;
         .addDevice {
             display: none;
         }
+        .deviceTitle {
+            font-size: 40px;
+            letter-spacing: 7px;
+        }
     }
     .deviceDetailsWrapper {
-        margin-left: 190px;
-        padding: 0 20px;
+        margin-left: 150px;
+        padding: 0px 20px 0px 50px;
+        .selectedDeviceWrapper {
+            .selectedDeviceTitle {
+                font-size: 25px;
+                letter-spacing: 4px;
+            }
+        }
+        .shadesWrapper, .modesWrapper, .IntensityWrapper {
+            .headingWrapper {
+                .title {
+                    font-size: 11px;
+                }
+            }
+        }
         .modesWrapper {
             .modeListContainer {
                 .modeList {
                     .intensity {
                         display: none;
+                    }
+                    .modeTitle {
+                        font-size: 14px;
+                        letter-spacing: 0.5px;
                     }
                 }
             }
@@ -278,6 +308,7 @@
                 font-size: 36px;
                 width: 200px;
                 margin-top: 55px;
+                letter-spacing: 5.76px;
             }
         }
     }
@@ -289,14 +320,16 @@
     }
 }
 
-@media (max-width: 374px) {
-    .plusIcon {
-        margin-left: 150px;
-    }
-    .deviceTitleWrapper {
-        margin-left: 150px;
-    }
+@media (max-width: 600px) {
     .deviceDetailsWrapper {
-        margin-left: 150px;
+        .shadesWrapper {
+            .checkBoxWrapper {
+                justify-content: flex-start;
+                
+                .checkBoxContainer {
+                    margin-right: 18px;
+                }
+            }
+        }
     }
 }
