--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@
 
 body {
   margin: 0;
+  float: left;
   //font-family: Montserrat-Bold;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
